--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,6 +1,7 @@
 <aside class="sidebar">
     <h2>Metode Topsis</h2>
     <ul>
-        <li><a href="/home" class="active">Home</a></li>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/kriteria">Kriteria & Sub Kriteria</a></li>
     </ul>
 </aside>
