--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,6 +115,12 @@ h1 {
     transition: color 0.3s ease;
 }
 
+h3 {
+    margin-bottom: 10px;
+    color: var(--text-light);
+    transition: color 0.3s ease;
+}
+
 .breadcrumb {
     font-size: 14px;
     color: var(--text-muted);
